--- a/src/html/layouts/application.html
+++ b/src/html/layouts/application.html
@@ -11,7 +11,9 @@
     {% block head %}{% endblock %}
   </head>
   <body>
+    {% block navigation %}{% endblock %}
     {% block content %}{% endblock %}
+    {% block footer %}{% endblock %}
     {% block javascript %}
       <script src="javascripts/app.js"></script>
     {% endblock %}
