Basic navigation template

--- a/src/stylesheets/config/variables/_colors.scss
+++ b/src/stylesheets/config/variables/_colors.scss
@@ -3,5 +3,6 @@ $colors: (
   vivid-blue:     #0066cc,
   electric-green: #12EE33,
   neon-magenta:   #AE11FE,
-  text-black:     #1F1D1D
+  text-black:     #1F1D1D,
+  nav-active:     #FFAA00
 );
