folder structure and menu links update

--- a/src/html/components/example-component/index.html
+++ b/src/html/components/example-component/index.html
@@ -2,7 +2,5 @@
 {{ macros.css('example-component') }}
 
 <div class="example-component">
-  <p>{{ text }}</p>
-  <p><strong>{{ caveat }}</strong></p>
-  <p><a href="{{ linkUrl }}">{{ link }}</a></p>
+  Just an Example
 </div>
