--- a/src/html/layouts/application.html
+++ b/src/html/layouts/application.html
@@ -1,21 +1,25 @@
 {%- import 'macros/helpers.html' as macros -%}
 
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{% block title %}{{ title }}{% endblock %}</title>
-    <link rel="stylesheet" href="stylesheets/global/typography.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% include "shared/app-icons.html" %}
-    {% block head %}{% endblock %}
-  </head>
-  <body>
-    {% block navigation %}{% endblock %}
-    {% block content %}{% endblock %}
-    {% block footer %}{% endblock %}
-    {% block javascript %}
-      <script src="javascripts/app.js"></script>
-    {% endblock %}
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>{% block title %}{{ title }}{% endblock %}</title>
+  <link rel="stylesheet" href="stylesheets/global/typography.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% include "shared/app-icons.html" %}
+  {% block head %}{% endblock %}
+</head>
+<body>
+
+{% block navigation %}{% endblock %}
+{% block content %}{% endblock %}
+
+{% include '../shared/footer.html' %}
+
+{% block javascript %}
+<script src="javascripts/app.js"></script>
+{% endblock %}
+</body>
 </html>
+
