top menu & footer css files
Seems like structure we want is not fit what blendid is expecting, will see in future what to do with

--- a/src/html/layouts/application.html
+++ b/src/html/layouts/application.html
@@ -1,5 +1,4 @@
 {%- import 'macros/helpers.html' as macros -%}
-<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -13,6 +12,7 @@
 <body>
 
   <header>
+
   {% block navigation %}{% endblock %}
   </header>
 
@@ -25,7 +25,7 @@
   </footer>
 
   {% block javascript %}
-  <script src="javascripts/app.js"></script>
+  <script src="../../javascripts/app.js"></script>
   {% endblock %}
 
 </body>
