--- a/src/html/layouts/application.html
+++ b/src/html/layouts/application.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %}{{ title }}{% endblock %}</title>
-  <link rel="stylesheet" href="{% block rootPath %}{% endblock %}../stylesheets/global/typography.css">
+  <link rel="stylesheet" href="/stylesheets/global/typography.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/material-components-web@v0.35.0/dist/material-components-web.min.css">
   {% block head %}{% endblock %}
@@ -21,11 +21,11 @@
   </main>
 
   <footer>
-  {% include '../shared/footer.html' %}
+  {% include 'shared/footer.html' %}
   </footer>
 
   {% block javascript %}
-  <script src="../../javascripts/app.js"></script>
+  <script src="/javascripts/app.js"></script>
   {% endblock %}
 
 </body>
