--- a/src/stylesheets/components/footer-menu/_footer-menu.scss
+++ b/src/stylesheets/components/footer-menu/_footer-menu.scss
@@ -1,4 +1,4 @@
-.nav-and-contacts {
-  background-color: mediumspringgreen;
-  margin: 1em;
+footer {
+  background: linear-gradient(235deg, #53a0fd, #3023ae 48%);
+  color: #ffffff;
 }
