--- a/src/html/layouts/application.html
+++ b/src/html/layouts/application.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>{% block title %}{{ title }}{% endblock %}</title>
   <link rel="stylesheet" href="/stylesheets/global/typography.css">
+  <link rel="stylesheet" href="/stylesheets/global/main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/material-components-web@v0.35.0/dist/material-components-web.min.css">
   {% block head %}{% endblock %}
