--- a/src/stylesheets/global/typography.scss
+++ b/src/stylesheets/global/typography.scss
@@ -5,6 +5,7 @@
   --insight-negative-color: #e13c1e;
   --insight-positive-color: #7e9204;
   --nav-active: #FFAA00;
+  --orange-background: #fe664b;
 }
 
 body {
