--- a/src/html/layouts/topmonks.html
+++ b/src/html/layouts/topmonks.html
@@ -1,20 +1,23 @@
 {%- import 'macros/helpers.html' as macros -%}
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}{{ title }}{% endblock %}</title>
+  <title>{% block title %}{{ language[page].title }}{% endblock %}</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/material-components-web@v0.35.0/dist/material-components-web.min.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="/stylesheets/global/typography.css">
   <link rel="stylesheet" href="/stylesheets/global/main.css">
+  <link rel="stylesheet" href="/stylesheets/global/anicka.css">
+
   {% block head %}{% endblock %}
   {% include "shared/app-icons.html" %}
 </head>
-<body>
-<div class="wrapper-outer">
+<body id="page-{{page}}">
+<div class="body-content-wrapper">
   <header>
     {% block navigation %}{% endblock %}
   </header>
@@ -23,7 +26,8 @@
     {% block content %}{% endblock %}
   </main>
 </div>
-<div class="wrapper-outer footer">
+
+<div class="body-content-wrapper footer">
   <footer>
     {% include 'shared/footer.html' %}
   </footer>
@@ -35,4 +39,3 @@
 
 </body>
 </html>
-
