--- a/src/stylesheets/global/main.scss
+++ b/src/stylesheets/global/main.scss
@@ -1,9 +1,15 @@
+:root {
+  --mdc-layout-grid-margin-desktop: 24px;
+  --mdc-layout-grid-gutter-desktop: 20px;
+  --mdc-layout-grid-column-width-desktop: 60px;
+}
+
 
 body {
   background-color: #ffffff;
 }
 
-.wrapper-outer {
+.body-content-wrapper {
   max-width: 1440px;
 
   &.footer {
@@ -19,7 +25,6 @@ main {
   max-width: 960px;
   margin: 0 auto;
 }
-
 
 .action-button {
   display:inline-block;
@@ -43,6 +48,32 @@ main {
   color: var(--topmonks-grey);
   margin: 0;
 }
+
+article {
+  box-shadow: 0 2px 23px 0 rgba(0,0,0,0.10);
+  border-radius: 20px;
+  border: 1px solid var(--topmonks-grey);
+  padding: 15px;
+}
+
+
+.main_info {
+  article {
+    padding-top: 120px;
+    background: url("/images/topmonks.com/listen_ic.svg") no-repeat;
+    background-position: center 40px;
+    background-size: 82px 82px;
+    min-height: 300px;
+  }
+  .develop {
+    background-image: url("/images/topmonks.com/develop_ic.svg");
+  }
+  .verify {
+    background-image: url("/images/topmonks.com/verify_ic.svg");
+  }
+}
+
+
 
 
 /* MD GRID DESKTOP BREAKPOINT*/
