--- a/src/stylesheets/global/anicka.scss
+++ b/src/stylesheets/global/anicka.scss
@@ -1,1 +1,28 @@
+h2 {
+  font-size: 38px;
+  text-transform: uppercase;
+  text-align: center;
+}
 
+.studies {
+  h2 {
+    color: #F5A623;
+    margin-bottom: 18px;
+  }
+  .studies_title p {
+    color: #9B9B9B;
+    text-align: center;
+  }
+  h3 {
+    margin-top: 14px;
+    margin-bottom: 0;
+  }
+
+  hr {
+    width: 59px;
+    height: 2px;
+    border: none;
+    background-color: #FE664B;
+    display: inline-flex;
+  }
+}
