--- a/src/stylesheets/prodeti.scss
+++ b/src/stylesheets/prodeti.scss
@@ -220,7 +220,7 @@ h3::after {
 }
 
 .courses p {
-  height: 10em;
+  height: 13em;
 }
 
 .courses a.button {
@@ -495,6 +495,9 @@ footer {
 .contact a {
   font-weight: 300;
 }
+.contact a:hover {
+  font-weight: 500;
+}
 
 .contact .mail {
   font-weight: lighter;
@@ -505,11 +508,11 @@ footer {
 .contact .mail::before {
   content: "";
   display: block;
-  background: url("/images/prodeti/rodice/jirka.jpg") no-repeat;
+  background: url("/images/prodeti/j.penzes.jpg") no-repeat;
   background-size: contain;
   border-radius: 50%;
-  width: 64px;
-  height: 64px;
+  width: 84px;
+  height: 84px;
   margin: 15px auto;
 }
 
@@ -694,5 +697,14 @@ footer {
   .nav_bar {
     height: 72px;
   }
+  .courses p {
+    height: 8em;
+  }
+}
 
+@media (min-width: 768px) {
+.main_info {
+  width: 85%;
+  margin: 0 auto;
+}
 }
