--- a/src/stylesheets/global/anicka.scss
+++ b/src/stylesheets/global/anicka.scss
@@ -23,6 +23,9 @@
   p {
     text-align: center;
   }
+  blockquote {
+    position: relative;
+  }
   blockquote p {
     color:  var(--topmonks-black);
   }
@@ -30,12 +33,19 @@
   blockquote::after {
     content: "";
     display: block;
-    background-image: url("/images/topmonks.com/unquote.svg") no-repeat;
-    width: 24px;
-    height: 24px;
+    width: 28px;
+    height: 28px;
+    position: absolute;
   }
   blockquote::after {
     background-image: url("/images/topmonks.com/quote.svg");
+    right: 160px;
+    top: 39px;
+  }
+  blockquote::before{
+    background-image: url("/images/topmonks.com/unquote.svg");
+    left: -22px;
+    bottom: 34px;
   }
   .name {
     font-size: 16px;
