--- a/src/stylesheets/global/anicka.scss
+++ b/src/stylesheets/global/anicka.scss
@@ -1,4 +1,3 @@
-
 .studies {
   .studies_title p {
     text-align: center;
@@ -7,8 +6,7 @@
     text-align: left;
     margin-top: 14px;
     margin-bottom: 0;
-    &:after
-    {
+    &:after {
       content: "";
       width: 59px;
       height: 2px;
@@ -26,7 +24,7 @@
 
   .name {
     font-size: 16px;
-    color:  var(--topmonks-grey);
+    color: var(--topmonks-grey);
     text-align: center;
   }
 }
