--- a/src/stylesheets/global/main.scss
+++ b/src/stylesheets/global/main.scss
@@ -4,7 +4,6 @@
   --mdc-layout-grid-column-width-desktop: 60px;
 }
 
-
 body {
   background-color: #ffffff;
 }
@@ -14,9 +13,19 @@ body {
   margin: 0 auto;
 
   &.footer {
-   /* TODO*/
-    background-image: linear-gradient(-215deg, #3023AE 0%, #53A0FD 47%, #B4EC51 100%);
-    background-image: linear-gradient(-205deg, #3023AE 0%, #53A0FD 47%, #B4EC51 100%);
+    /* TODO*/
+    background-image: linear-gradient(
+      -215deg,
+      #3023ae 0%,
+      #53a0fd 47%,
+      #b4ec51 100%
+    );
+    background-image: linear-gradient(
+      -205deg,
+      #3023ae 0%,
+      #53a0fd 47%,
+      #b4ec51 100%
+    );
   }
 }
 
@@ -28,22 +37,20 @@ main {
 }
 
 .action-button {
-  display:block;
+  display: block;
   border-radius: 100px;
   color: #fff;
   background-color: var(--topmonks-orange);
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.16);
   padding: 20px 28px;
-  margin:0 1em;
+  margin: 0 1em;
   text-align: center;
-  text-transform:uppercase;
-
+  text-transform: uppercase;
 
   &:hover {
     text-decoration: none;
   }
 }
-
 
 .sub-text {
   color: var(--topmonks-grey);
@@ -51,7 +58,7 @@ main {
 
 .box,
 .teambox {
-  box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.10);
+  box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.1);
   border-radius: 20px;
   border: 1px solid var(--topmonks-grey);
   padding: 15px;
@@ -75,10 +82,9 @@ main {
   }
 }
 
-
-
 blockquote::before,
-blockquote::after { /* TODO */
+blockquote::after {
+  /* TODO */
   content: "";
   display: block;
   background: url("/images/topmonks.com/unquote.svg") no-repeat;
@@ -91,13 +97,11 @@ blockquote::after {
   background-image: url("/images/topmonks.com/quote.svg");
 }
 
-
 /* MD GRID DESKTOP BREAKPOINT*/
 @media (min-width: 840px) {
   .box {
     min-height: 450px;
   }
-
 }
 
 /* MD GRID TABLET AND ABOVE BREAKPOINT */
@@ -109,5 +113,4 @@ blockquote::after {
 
 /* MD GRID TABLET ONLY BREAKPOINT */
 @media (min-width: 480px) and (max-width: 839px) {
-
 }
