--- a/src/stylesheets/global/anicka.scss
+++ b/src/stylesheets/global/anicka.scss
@@ -32,8 +32,8 @@ header {
   blockquote::after {
     content: "";
     display: block;
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 34px;
     position: absolute;
   }
   blockquote::after {
@@ -106,7 +106,7 @@ header {
     top: 230px;
     left: 153px;
   }
-  .design {
+  .design h3 {
     text-align: left;
   }
   .develop {
