--- a/src/stylesheets/global/main.scss
+++ b/src/stylesheets/global/main.scss
@@ -77,9 +77,21 @@ blockquote::after {
     color: #4A4A4A;
     width: 400px;
   }
+  .jumbotron__lead p {
+    max-width: 320px;
+  }
   blockquote::before,
   blockquote::after {
     background-size: 16px 16px;
+    position: absolute;
+  }
+  blockquote::before {
+    top: 105px;
+    left: 38px;
+  }
+  blockquote::after {
+    top: 233px;
+    left: 160px;
   }
   p.box--purple {
     box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.1);
